# metamotivo

./: .gitignore  CONTRIBUTING.md  README.md  UPDATE.md  pyproject.toml  tutorial.ipynb  tutorial_benchmark.ipynb  tutorial_train.ipynb
examples/: README.md  fb_train_dmc.py  fbcpr_train_humenv.py  humenv_evaluation.py  train_command.sh
metamotivo/: __init__.py  nn_models.py
metamotivo/buffers/: buffers.py
metamotivo/fb/: __init__.py  agent.py  huggingface.py  model.py
metamotivo/fb_cpr/: __init__.py  agent.py  huggingface.py  model.py
metamotivo/misc/: zbuffer.py
metamotivo/wrappers/: humenvbench.py
