[project]
name = "metamotivo"
dynamic = ["version"]
description = "Inference and Training of FB-CPR"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3",
    "safetensors",
]

[project.urls]
Homepage = "https://github.com/facebookresearch/metamotivo"

[project.optional-dependencies]
humenv=[
    "humenv[bench] @ git+https://github.com/facebookresearch/humenv.git",
]
huggingface = [
    "huggingface-hub[cli,torch]>=0.26.3",
]
all = [
    "huggingface-hub[cli,torch]>=0.26.3",
    "humenv[bench] @ git+https://github.com/facebookresearch/humenv.git",
    "tensordict>=0.6.0"
]

[tool.setuptools.dynamic]
version = {attr = "metamotivo.__version__"}

[tool.setuptools.packages.find]
include = ["metamotivo*"]

[tool.ruff]
line-length = 140
